[metadata]
name = KeyExtractor
version = 0.1.1dev2
author = Yu-Lun Chiang
author_email = chiangyulun0914@gmail.com
description = KeyExtractor performs keyword extraction for chinese documents with state-of-the-art transformer models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenyummy/KeyExtractor.git
download_url = https://github.com/allenyummy/KeyExtractor/archive/refs/tags/0.1.1dev2.tar.gz
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch == 1.7.1
    flair == 0.8.0post1
    transformers == 4.5.0
    ckip-transformers == 0.2.3
test_requires = 
    pytest == 6.2.3
    pytest-mock == 3.5.1
    pytest-cov == 2.11.1

[options.packages.find]
where = src
exclude = 
    tests